--- a/blogs/first.mdx
+++ b/blogs/first.mdx
@@ -1,22 +1,21 @@
 ---
-title: My Testing Blog
-data: 24th September 2023
-description: Welcome to testing my first blog in nextjs
+title: My First Blog
+date: '18th April 2023'
+description: Welcome to my first blog.
 ---
 
-This is my **first** blog post using markdown language and typescript/nextjs
+This is my **first** blog post using *markdown*.
 
-### Subheading
+### My subheading
+Here is an image:
 
-See image below: 
+![Laptop on Desk](/img/laptop.jpg)
 
-![Will Smith](/img/will.jpg)
-
-Code snippet:
-
+There is a code snippet below:
 ```
-export function newComponent(){
+export function myComponent(){
     return (
-        <p> New component test </p>
+        <p>test</p>
     )
 }
+```
